prep: CORS, /health endpoint, add .env.example files

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,2 +1,4 @@
+# Vite env var for API base URL (point to your Render server)
+VITE_API_URL=https://your-service.onrender.com
 # Client env for Vite
 VITE_API_URL=http://localhost:5000
