--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,23 @@
+# MongoDB connection string (do NOT commit real secrets here)
+MONGO_URI=mongodb+srv://<user>:<password>@cluster0.mongodb.net/salon?retryWrites=true&w=majority
+
+# JWT secret for signing admin tokens
+JWT_SECRET=your_super_secret_jwt_key
+
+# Admin seed credentials (optional for seedAdmin.js)
+ADMIN_EMAIL=admin@example.com
+ADMIN_PASSWORD=changeme
+
+# Twilio (optional)
+TWILIO_ACCOUNT_SID=ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+TWILIO_AUTH_TOKEN=your_auth_token
+TWILIO_PHONE_NUMBER=+1XXXXXXXXXX
+
+# URL of the deployed client (used to restrict CORS in production)
+CLIENT_URL=https://your-client.vercel.app
+
+# Optional: port to run server (Render sets this automatically)
+PORT=5000
 MONGO_URI=your_mongodb_atlas_connection_string
 JWT_SECRET=your_jwt_secret_here
 ADMIN_EMAIL=admin@example.com
